# lemon

./: .gitignore  CMakeLists.txt  FINAL_SUMMARY.md  INTEGRATION_SUMMARY.md  PERPLEX_INTEGRATION.md  README.md  RECOMMENDATIONS.md  SCANNER_INTEGRATION.md  STEPCODE_INTEGRATION.md  TESTING_GUIDE.md  _codeql_detected_source_root  lemon
perplex/: CMakeLists.txt  LICENSE.txt  README.md  build_and_test.sh  parser.c  parser.out  perplex  perplex_parser.h  perplex_scanner.c  test_input.perplex  test_lemon.sh  test_output.c
stepcode/: README.md  expparse.c  expparse.out  lemon_step  test_lemon.sh
